--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -317,7 +317,10 @@ h6 {
  
 }
 
+#add {
+  margin-right: 8px;
 
+}
 }
 /*--------------------------------------------------------------
 # Navigation Menu
